fix: if the reward is not enabled, the reward-link mode is not aligned

--- a/source/css/_layout/reward.styl
+++ b/source/css/_layout/reward.styl
@@ -23,6 +23,7 @@
     background: var(--anzhiyu-red);
     color: var(--anzhiyu-white);
     padding: 0;
+    margin-right: 0.5rem;
     width: 126px;
     height: 40px;
     line-height: 39px;
@@ -113,7 +114,6 @@
   line-height: 39px;
   box-shadow: var(--anzhiyu-shadow-green);
   border-radius: 8px;
-  margin-left: 0.5rem;
   text-align: center;
   transition: 0.3s;
   &:hover
